cluster/study/paperless/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 3.2.1
  name: paperless
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: paperless
        app.kubernetes.io/version: 3.2.1
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
      - image: ghcr.io/paperless-ngx/paperless-ngx:3.2.1@sha256:5fa76604a81df6945086e0837b14b56543d137e8ce4f311cc5d9ebe907e74e79
        name: paperless
        ports:
        - containerPort: 8000
          name: http
        volumeMounts:
        - mountPath: /usr/src/paperless/data
          name: data
        - mountPath: /usr/src/paperless/media
          name: media
        - mountPath: /usr/src/paperless/consume
          name: consume
        - mountPath: /tmp
          name: tmp
        - mountPath: /run
          name: run
        resources:
          requests:
            cpu: 250m
            memory: 768Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        readinessProbe:
          httpGet:
            path: /accounts/login/
            port: 8000
          periodSeconds: 15
        startupProbe:
          httpGet:
            path: /accounts/login/
            port: 8000
          periodSeconds: 10
          failureThreshold: 60
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-data-pvc
      - name: media
        persistentVolumeClaim:
          claimName: paperless-media-pvc
      - name: consume
        emptyDir: {}
      - name: tmp
        emptyDir: {}
      - name: run
        emptyDir: {}
      - name: valkey
        emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
