cluster/study/paperless/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/version: 3.2.1
  name: paperless
spec:
  selector:
    app.kubernetes.io/name: paperless
  ports:
  - name: http-paperless
    port: 8000
    targetPort: 8000
