cluster/study/paperless/egress-network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paperless-egress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: postgres
    ports:
    - port: 5432
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 100.64.0.0/10
    ports:
    - port: 443
      protocol: TCP
